codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_command_execution_strips_shell_wrapper.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: blob
---
• You ran (5ms) python3 -c 'print("Hello, world!")'
  └ Hello, world!
