codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_running_command_displays_timeout.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: active_blob(&chat)
---
• Running (timeout 1m 30s) sleep 60
