codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__parallel_exec_mixed_progress.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Running 4 commands in parallel (2/4 done)
  ├─ • nc -vz -G 5 106.104.175.164 9999
  ├─ ✗ (5ms) nc -vz -G 5 175.182.184.125 9999
  │  └─ nc: connectx to 175.182.184.125 port 9999 (tcp) failed: Operation timed
  │     out
  ├─ • nc -vz -G 5 175.182.185.183 9999
  └─ ✗ (5ms) nc -vz -G 5 192.168.0.159 9999
     └─ nc: connectx to 192.168.0.159 port 9999 (tcp) failed: Operation timed
        out
