codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_passive_status.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 133
expression: "render_bottom_popup(&chat, 80)"
---
• Working (0s • esc to interrupt)
  └ Our systems are thinking a bit more about this request before responding.


› draft

  tab to queue message                                       100% context left
